# ethers

./: .gitignore  Cargo.toml  LICENSE  README.md  ethereum-monorepo.code-workspace  gameplan.md
.github/: CODEOWNERS
.github/workflows/: ethers-core-cd.yaml  ethers-core-ci.yaml  ethers-utils-cd.yaml  ethers-utils-ci.yaml  interface-cd.yaml  interface-ci.yaml  plugin-js-cd.yaml  plugin-js-ci.yaml  provider-js-cd.yaml  provider-js-ci.yaml  provider-py-cd.yaml  provider-py-ci.yaml  wrapper-cd.yaml  wrapper-ci.yaml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  provider.rs  transaction.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  signer.rs
crates/transaction/: Cargo.toml
crates/transaction/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: address.rs  amount.rs  encode.rs  lib.rs  pack.rs
crates/utils/: Cargo.toml
crates/utils/src/: encode.rs  error.rs  lib.rs  pack.rs  regex.rs
ethers-utils/: Cargo.toml  deployment.json  polywrap.infra.yaml  polywrap.yaml  tsconfig.json
ethers-utils/src/: lib.rs  schema.graphql
ethers-utils/tests/: e2e.spec.ts
plugin-js/: .eslintrc.js  package.json  tsconfig.json
plugin-js/src/__tests__/integration/: polywrap.yaml
plugin-provider/implementations/js/: README.md  package.json  polywrap.yaml  tsconfig.build.json  tsconfig.json
plugin-provider/implementations/js/src/: Connection.ts  networks.ts  schema.graphql
plugin-provider/implementations/js/tests/: index.spec.ts
plugin-provider/interface/: deployment.json  polywrap.yaml
provider/implementations/js/: jest.config.js  package.json  polywrap.yaml  tsconfig.build.json
provider/implementations/js/scripts/: fix-bindings.ts
provider/implementations/js/src/: Connection.ts  Connections.ts  index.ts  rpc.ts  schema.graphql
provider/implementations/js/tests/: connection.spec.ts  connections.spec.ts  index.spec.ts
provider/implementations/py/: .gitignore  package.json  polywrap.yaml  pyproject.toml  tox.ini
provider/implementations/py/ethereum_provider_py/: __init__.py  connection.py  connections.py
provider/implementations/py/ethereum_provider_py/wrap/: types.py
provider/implementations/py/polywrap_ethereum_provider/: __init__.py  connection.py  connections.py  networks.py  request.py  rpc.py
provider/implementations/py/polywrap_ethereum_provider/rpc/: eth_send_transaction.py
provider/implementations/py/polywrap_ethereum_provider/wrap/: types.py
provider/implementations/py/tests/: conftest.py  test_provider.py  test_request.py  test_sign_message.py  test_sign_transaction.py  test_signer_address.py  test_wait_for_transaction.py  utils.py
provider/implementations/swift/: Package.resolved  Package.swift
provider/implementations/swift-metamask/: Package.resolved  Package.swift  README.md
provider/implementations/swift-metamask/include/: PolywrapNativeClient.h  module.modulemap
provider/interface/: README.md  URI.txt  deployment.json  package.json  polywrap.yaml
provider/interface/src/: schema.graphql
provider/js/: .gitignore  README.md  package.json  polywrap.plugin.yaml  polywrap.yaml  schema.graphql
provider/js/src/: Connections.ts  index.ts
provider/js/tests/: index.spec.ts
wrapper/: .gitignore  Cargo.toml  Dockerfile  README.md  URI.txt  deployment.json  jest.config.js  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.infra.yaml  polywrap.yaml  schema.graphql
wrapper/core/: Cargo.toml  polywrap.yaml
wrapper/core/src/: lib.rs
wrapper/core/src/api/: mod.rs  transaction.rs
wrapper/core/src/helpers/: mapping.rs
wrapper/core/src/polywrap_provider/: iprovider.rs  provider.rs  signer.rs
wrapper/core/tests/types/: polywrap.yaml
wrapper/core/tests/utils/: infra.ts
wrapper/eth-ens-ipfs/: docker-compose.yaml
wrapper/eth-ens-ipfs/eth/: Dockerfile
wrapper/src/: api.rs  error.rs  format.rs  iprovider.rs  lib.rs  mapping.rs  provider.rs  schema.graphql  signer.rs
wrapper/src/api/: abi.rs  mod.rs  transaction.rs  util.rs
wrapper/src/helpers/: format.rs  mapping.rs  mod.rs
wrapper/src/polywrap_provider/: error.rs  iprovider.rs  mod.rs  provider.rs  signer.rs  sync_provider.rs  sync_signer.rs  sync_signer_middleware.rs
wrapper/src/wrap/: entry.rs  mod.rs
wrapper/src/wrap/access_item/: mod.rs  serialization.rs
wrapper/src/wrap/eip1559_fees_estimate/: mod.rs  serialization.rs
wrapper/src/wrap/imported/: mod.rs
wrapper/src/wrap/imported/provider_connection/: mod.rs  serialization.rs
wrapper/src/wrap/imported/provider_module/: mod.rs  serialization.rs
wrapper/src/wrap/log/: mod.rs  serialization.rs
wrapper/src/wrap/module/: mod.rs  serialization.rs  wrapped.rs
wrapper/src/wrap/static_tx_result/: mod.rs  serialization.rs
wrapper/src/wrap/tx_options/: mod.rs  serialization.rs
wrapper/src/wrap/tx_receipt/: mod.rs  serialization.rs
wrapper/src/wrap/tx_request/: mod.rs  serialization.rs
wrapper/src/wrap/tx_response/: mod.rs  serialization.rs
wrapper/tests/: e2e.simple.spec.ts  e2e.spec.ts
wrapper/tests/types/: polywrap.app.yaml  polywrap.yaml
wrapper/tests/types/wrap/: types.ts
wrapper/tests/utils/: infra.ts  storage.ts
wrapper/utils/: Cargo.toml  package.json
wrapper/utils/src/: schema.graphql
wrapper/utils/tests/: e2e.spec.ts
wraps/core/: Cargo.toml  README.md  URI.txt  deployment.json  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml  tsconfig.json
wraps/core/src/: lib.rs  schema.graphql
wraps/core/src/api/: mod.rs  transaction.rs
wraps/core/src/helpers/: format.rs  mapping.rs
wraps/core/src/polywrap_provider/: error.rs  mod.rs  provider.rs  signer.rs
wraps/core/tests/: e2e.spec.ts
wraps/core/tests/types/: polywrap.yaml
wraps/core/tests/utils/: infra.ts  storage.ts
wraps/utils/: Cargo.toml  README.md  URI.txt  deployment.json  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
wraps/utils/src/: lib.rs  schema.graphql
wraps/utils/tests/: e2e.spec.ts
(+5 files in other folders)
